Fixed left header side on smaller screen sizes (got all the way down to 320px ish, kinda gets wonky after that)

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -13,6 +13,7 @@ header {
 #left-header {
     display: flex;
     flex-direction: row;
+    position: relative;
 }
 
 #face-click-prompt {
@@ -46,6 +47,17 @@ header {
         width: 65px;
         // icon change hitbox
         // background-color: rgba(255, 0, 0, 0.207);
+    }
+}
+
+@media (max-width: 500px) {
+    #left-header {
+        height: 140px;
+    }
+
+    #icon-container {
+        position: absolute;
+        right: 0;
     }
 }
 
